[Add] Main Title - 마우스 이동 경로에 따라 숨겨진 이미지 보여짐

--- a/index.html
+++ b/index.html
@@ -27,9 +27,12 @@
     <!-- 인트로 화면 -->
     <div id="intro-screen">
       <div id="intro-title">
-        <!-- <h1>Find the Difference</h1> -->
-         <img src="./assets/title1.png" class="main-title" />
-        <p>당신이 알고 있는 것과 다른 점을 10초 안에 찾아보세요.</p>
+        <div class="title-container">
+          <img src="./assets/title1.png" class="main-title" />
+          <img src="./assets/title2.png" class="title-mask" />
+          <div class="mask-area" id="mask-area"></div>
+        </div>
+        <p>당신이 알고 있는 것과 다른 점을 10초 안에 찾아보세요</p>
       </div>
       <button id="start-button">START</button>
     </div>
@@ -136,10 +139,10 @@
       </div>
 
       <!-- container -->
-        <div class="final-score">
-          <h1>최종 스코어</h1>
-          <p id="score-text">0 / 12</p>
-        </div>
+      <div class="final-score">
+        <h1>최종 스코어</h1>
+        <p id="score-text">0 / 12</p>
+      </div>
 
       <div class="restart-button-wrapper">
         <button id="restart-button">RESTART</button>
