[Add] intro-screen / main title 커서 동그라미 그림자 추가

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
           <img src="./assets/title1.png" class="main-title" />
           <img src="./assets/title2.png" class="title-mask" />
           <div class="mask-area" id="mask-area"></div>
+          <div class="shadow-circle" id="shadow-circle"></div>
         </div>
         <p>당신이 알고 있는 것과 다른 점을 10초 안에 찾아보세요</p>
       </div>
