--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
       </div>
 
-      <div class="content-wrapper">
+      <!-- <div class="content-wrapper"> -->
         <!-- 타이머 -->
         <div class="container-header">
           <div id="timer"></div>
@@ -62,9 +62,12 @@
             <div id="timer-bar"></div>
           </div>
         </div>
-        <img id="painting" src="" alt="문제 이미지" />
-      </div>
 
+        <!-- 문제 이미지 -->
+        <img id="painting" src="" alt="문제 이미지" />
+      <!-- </div> -->
+
+      <!-- 문제 정답 클릭 -->
       <div id="click-zones"></div>
     </div>
 
