[Chore] 오버레이뷰에서 해설뷰로 자동으로 넘어감

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div id="result-symbol">O</div>
         <div id="result-text">정답!</div>
       </div>
-      <button id="explanation-button">해설보기</button>
+      <!-- <button id="explanation-button">해설보기</button> -->
     </div>
 
     <!-- 해설 -->
