[Chore] 해설뷰에서 홈버튼 안 눌리는 현상 개선

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div id="game-container" class="hidden">
       <!-- 상단 컨트롤 바 추가 -->
       <div class="game-header-bar">
-        <button id="home-button">
+        <button class="home-button">
           <img src="./assets/home.png" alt="홈으로" />
         </button>
         <h3>Find the Difference</h3>
@@ -82,7 +82,7 @@
     <div id="explanation-view" class="hidden">
       <!-- 상단 컨트롤 바 추가 -->
       <div class="game-header-bar">
-        <button id="home-button">
+        <button class="home-button">
           <img src="./assets/home.png" alt="홈으로" />
         </button>
         <h3>Find the Difference</h3>
